--- a/maker.html
+++ b/maker.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Transcript Maker</title>
+  <title>Hyperaudio Transcript Maker</title>
   <link rel="stylesheet" type="text/css" href="css/hyperaudio.transcript.css" />
   <link rel="stylesheet" type="text/css" href="css/hyperaudio.player.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -37,6 +37,7 @@
   <header id="header">
     <h1>Hyperaudio Maker</h1>
     <div id="save-button">6</div>
+    <div id="save-button-saving"></div>
   </header>
 <div>
 
@@ -104,6 +105,8 @@ if (document.location.hostname.indexOf('hyperaud.io') > -1) {
 } else {
   domain = 'hyperaudio.net';
 }
+
+var savingAnim = document.querySelector('#save-button-saving');
 
 var API = 'http://' + prefix + 'api.' + domain + '/v1';
 
@@ -369,6 +372,7 @@ $( document ).ready(function() {
   }
 
   function updateTranscript(user) {
+
     $.ajax( API + '/' + user + '/transcripts/' + transcriptObject._id, {
       type: "PUT",
       contentType: "application/json; charset=utf-8",
@@ -386,9 +390,11 @@ $( document ).ready(function() {
         transcriptObject = data;
         console.log(data);
         console.log('Saved!');
+        savingAnim.style.display = 'none';
       },
       error: function() {
         alert('Save Error');
+        savingAnim.style.display = 'none';
       },
       xhrFields: {
         withCredentials: true
@@ -398,6 +404,7 @@ $( document ).ready(function() {
   }
 
   function saveTranscript(user) {
+    
     $.ajax( API + '/' + user + '/transcripts', {
       type: "POST",
       contentType: "application/json; charset=utf-8",
@@ -413,9 +420,11 @@ $( document ).ready(function() {
         transcriptObject = data;
         console.log(data);
         console.log('Created!');
+        savingAnim.style.display = 'none';
       },
       error: function() {
         alert('Save Error');
+        savingAnim.style.display = 'none';
       },
       xhrFields: {
         withCredentials: true
@@ -428,6 +437,7 @@ $( document ).ready(function() {
     whoami(function() {
       if (user) {
         //
+        savingAnim.style.display = 'block';
         if (transcriptObject) {
           updateTranscript(user);
         } else {
