--- a/maker.html
+++ b/maker.html
@@ -57,7 +57,7 @@
 
 <script src="http://code.jquery.com/jquery-2.0.3.js"></script>
 <script type="text/javascript" src="lib/purl.js"></script>
-<script type="text/javascript" src="js/hyperaudio.js"></script>
+<script type="text/javascript" src="js/hyperaudio-lib.js"></script>
 
 <script>
 
