--- a/maker.html
+++ b/maker.html
@@ -29,7 +29,12 @@
     overflow: auto;
   }
 
+  .hyperaudio-player .hyperaudio-player-gui {
+    opacity: 1;
+  }
+
   </style>
+  <link rel="stylesheet" type="text/css" href="lib/shepherd/css/shepherd-theme-hyperaudio.css" />
 </head>
 <body>
 
@@ -438,6 +443,9 @@ $( document ).ready(function() {
 
 });
 </script>
-
+<!-- remove the following line if analytics are not required -->
+<script type="text/javascript" src="/commons/tools/analytics/ga.js"></script>
+<script type="text/javascript" src="lib/shepherd/shepherd.min.js"></script>
+<script type="text/javascript" src="js/shepherd-tour.js"></script>
 </body>
 </html>
