--- a/maker.html
+++ b/maker.html
@@ -34,7 +34,8 @@
   }
 
   </style>
-  <link rel="stylesheet" type="text/css" href="lib/shepherd/css/shepherd-theme-hyperaudio.css" />
+  <!--<link rel="stylesheet" type="text/css" href="lib/shepherd/css/shepherd-theme-hyperaudio.css" />-->
+  <link rel="stylesheet" type="text/css" href="http://hyperaud.io/assets/tours/shepherd/css/shepherd-theme-hyperaudio.css" />
 </head>
 <body>
 
